# PDFfairy

./: README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/pdffairy/: color.py
src/pdffairy/exceptions/: pdfexceptions.py
src/pdffairy/filters/: ascii85.py  ccitt.py  jbig2.py  lzw.py  paeth_filter.py
src/pdffairy/pdftypes/: anchor.py  array.py  paper_size.py
