[project]
name = "apifairy"
version = "0.0.1.dev0"
authors = [{ name = "Arun K Soman", email = "arunksoman5678@gmail.com" }]
description = "Pure Python PDF library"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = []

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/arunksoman/PDFfairy"
"Bug Tracker" = "https://github.com/arunksoman/PDFfairy/issues"

[project.optional-dependencies]
docs = ["sphinx"]

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"
